--- a/extra_apps/pagedown/templates/pagedown/widgets/default.html
+++ b/extra_apps/pagedown/templates/pagedown/widgets/default.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 <div id="editormd">
-    <textarea style="display:none;">{{ body }}</textarea>
+    <textarea name="origin_content" style="display:none;">{{ body }}</textarea>
 </div>
 
 <script type="application/javascript" src="{% static 'vendor/editormd/js/editormd.js' %}"></script>
@@ -10,9 +10,9 @@
         var editor = editormd("editormd", {
             width: "100%",
             height: 500,
-            theme : "dark",
-            previewTheme : "dark",
-            editorTheme : "pastel-on-dark",
+            // theme : "dark",
+            // previewTheme : "dark",
+            // editorTheme : "pastel-on-dark",
             syncScrolling: "single",
             path: "/static/vendor/editormd/lib/",
             emoji: true,
