1, repaired upload image function in markdown editor;

--- a/extra_apps/pagedown/templates/pagedown/widgets/default.html
+++ b/extra_apps/pagedown/templates/pagedown/widgets/default.html
@@ -17,6 +17,9 @@
             path: "/static/vendor/editormd/lib/",
             emoji: true,
             imageUpload: true,
+            imageUploadTokenURL: '{{ imageUploadTokenURL }}',
+            imageUploadURL: '{{ imageUploadURL }}',
+            imageRequestBaseURL: '{{ imageRequestBaseURL }}',
             imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp", "svg"]
         });
     });
