1, develop relative image path markdown extension;

--- a/templates/emailMessage.html
+++ b/templates/emailMessage.html
@@ -12,20 +12,20 @@
               <tbody>
                 <tr>
                   <td width='160' height='48' border='0' align='center' valign='middle' style='padding-left:5px;'>
-                    <a href='http://www.coderap.com' target='_blank' style='color:#ffffff;text-align:left;text-decoration:none;font-weight:100;'>
-                      Diomedes博客
+                    <a href='{{ base_url }}' target='_blank' style='color:#ffffff;text-align:left;text-decoration:none;font-weight:100;'>
+                      Diomedes的工坊
                     </a>
                   </td>
                   <td width='703' height='48' colspan='2' align='right' valign='middle' style='color:#ffffff; padding-right:20px;'>
-                    <a href='http://www.coderap.com' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>首页</a>&nbsp;&nbsp;
+                    <a href='{{ base_url }}' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>首页</a>&nbsp;&nbsp;
                     <span style='color:#fff;'>|</span>&nbsp;&nbsp;
-                    <a href='http://www.coderap.com/articles' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>文章</a>&nbsp;&nbsp;
+                    <a href='{{ base_url }}/articles' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>文章</a>&nbsp;&nbsp;
                     <span style='color:#fff;'>|</span>&nbsp;&nbsp;
-                    <a href='http://www.coderap.com/albums' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>图集</a>&nbsp;&nbsp;
+                    <a href='{{ base_url }}/albums' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>图集</a>&nbsp;&nbsp;
                     <span style='color:#fff;'>|</span>&nbsp;&nbsp;
-                    <a href='http://www.coderap.com/movies' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>电影</a>&nbsp;&nbsp;
+                    <a href='{{ base_url }}/movies' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>电影</a>&nbsp;&nbsp;
                     <span style='color:#fff;'>|</span>&nbsp;
-                    <a href='http://www.coderap.com/timeline' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>时间轴</a></td>
+                    <a href='{{ base_url }}/timeline' target='_blank' style='color:#ffffff;text-decoration:none;font-weight:100;'>时间轴</a></td>
                 </tr>
               </tbody>
             </table>
