1, modified comment module;

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,12 @@
       reading: 2,
       album: 3,
       movie: 4
-    };
-  </script>
+    };</script>
   <title></title>
   <link href=/static/css/app.9eb7f5a8ab9efef021f786ea8d7a562c.css rel=stylesheet>
 </head>
 <body>
 <div id=app></div>
-<script type=text/javascript src=/static/js/app.2dcf70f7d2e6ca2937d2.js></script>
+<script type=text/javascript src=/static/js/app.82b776892e4f01039e38.js></script>
 </body>
 </html>
