1, optimize Modal component;

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1.user-scalable=no">
   <link rel=stylesheet type=text/css href=/static/css/reset.css>
   <script>
+    window.__host__ = '{{ site_infos.api_base_url }}';
     window.__access_auth__ = '{{ site_infos.access_password_encrypt }}';
     window.__force_refresh__ = '{{ site_infos.is_force_refresh }}' === 'True';
     window.__category_info__ = {
@@ -18,6 +19,6 @@
 </head>
 <body>
 <div id=app></div>
-<script type=text/javascript src=/static/js/app.82b776892e4f01039e38.js></script>
+<script type=text/javascript src=/static/js/app.d0944d5013448b36830a.js></script>
 </body>
 </html>
